cmake_minimum_required(VERSION 3.20.0)
project(hodsa)

#### Data Structures

### Linear Data Structures

## Dynamic Data Structures
add_subdirectory(hodsa/data_structures/linear_data_structures/dynamic_data_structures/stack)
add_subdirectory(hodsa/data_structures/linear_data_structures/dynamic_data_structures/queue)

#### Algorithms

#### Examples
add_subdirectory(examples)